@@ -621,7 +621,9 @@ t/data/reporter/npg_qc/mqc_outcome_ent.yml
 t/data/reporter/npg_qc/seq_component.yml
 t/data/reporter/npg_qc/seq_component_composition.yml
 t/data/reporter/npg_qc/seq_composition.yml
+t/data/reporter/mlwarehouse/300-EseqFlowcell.yml
 t/data/reporter/mlwarehouse/300-IseqProductMetric.yml
+t/data/reporter/mlwarehouse/400-EseqProductMetric.yml
 t/data/reporter/mlwarehouse/400-IseqFlowcell.yml
 t/perlcriticrc
 t/data/fixtures/npg_tracking/000-designation.yml
