@@ -1,0 +1,254 @@
+---
+- elembio_project: ~
+  elembio_samplename: ~
+  eseq_composition_tmp: '{"components":[{"id_run":50544,"position":1,"tag_index":0}]}'
+  id_eseq_flowcell_tmp: ~
+  id_eseq_pr_metrics_tmp: 1
+  id_eseq_product: 9208ee535d1574155fb339ec454533978a5a4ebe9be7f867163498242ef12cb7
+  id_run: 50544
+  is_sequencing_control: 0
+  lane: 1
+  last_changed: 2025-07-24 15:25:29
+  qc: ~
+  qc_lib: ~
+  qc_seq: ~
+  tag2_sequence: ~
+  tag_decode_count: 7361215
+  tag_decode_percent: 6.62905
+  tag_index: 0
+  tag_sequence: ~
+- elembio_project: ~
+  elembio_samplename: Adept_CB1
+  eseq_composition_tmp: '{"components":[{"id_run":50544,"position":1,"tag_index":1}]}'
+  id_eseq_flowcell_tmp: ~
+  id_eseq_pr_metrics_tmp: 2
+  id_eseq_product: fe8435767ab5cb199d649126fb3ccd24f17429af5bf5a40616cae63d8335347b
+  id_run: 50544
+  is_sequencing_control: 1
+  lane: 1
+  last_changed: 2025-07-24 15:25:29
+  qc: ~
+  qc_lib: ~
+  qc_seq: ~
+  tag2_sequence: ~
+  tag_decode_count: 15086
+  tag_decode_percent: 0.0135855
+  tag_index: 1
+  tag_sequence: ATGTCGCT
+- elembio_project: ~
+  elembio_samplename: Adept_CB2
+  eseq_composition_tmp: '{"components":[{"id_run":50544,"position":1,"tag_index":2}]}'
+  id_eseq_flowcell_tmp: ~
+  id_eseq_pr_metrics_tmp: 3
+  id_eseq_product: b00e9bffa48e9f52f6a9f2fcfc5733af06e319f9541f70ae41b58df577fbbe8d
+  id_run: 50544
+  is_sequencing_control: 1
+  lane: 1
+  last_changed: 2025-07-24 15:25:29
+  qc: ~
+  qc_lib: ~
+  qc_seq: ~
+  tag2_sequence: ~
+  tag_decode_count: 18742
+  tag_decode_percent: 0.0168779
+  tag_index: 2
+  tag_sequence: CACAGATC
+- elembio_project: ~
+  elembio_samplename: Adept_CB3
+  eseq_composition_tmp: '{"components":[{"id_run":50544,"position":1,"tag_index":3}]}'
+  id_eseq_flowcell_tmp: ~
+  id_eseq_pr_metrics_tmp: 4
+  id_eseq_product: ac83d87c2387d5fa6a8cc7047f109b324b768eacc58e7377a3f2a5af596a2745
+  id_run: 50544
+  is_sequencing_control: 1
+  lane: 1
+  last_changed: 2025-07-24 15:25:29
+  qc: ~
+  qc_lib: ~
+  qc_seq: ~
+  tag2_sequence: ~
+  tag_decode_count: 14765
+  tag_decode_percent: 0.0132964
+  tag_index: 3
+  tag_sequence: GCACATAG
+- elembio_project: ~
+  elembio_samplename: Adept_CB4
+  eseq_composition_tmp: '{"components":[{"id_run":50544,"position":1,"tag_index":4}]}'
+  id_eseq_flowcell_tmp: ~
+  id_eseq_pr_metrics_tmp: 5
+  id_eseq_product: d2ce445b7b39d2561a22e62223c47fa492ca40a4749359822846145f1de67cfe
+  id_run: 50544
+  is_sequencing_control: 1
+  lane: 1
+  last_changed: 2025-07-24 15:25:29
+  qc: ~
+  qc_lib: ~
+  qc_seq: ~
+  tag2_sequence: ~
+  tag_decode_count: 17227
+  tag_decode_percent: 0.0155135
+  tag_index: 4
+  tag_sequence: TGTGTCGA
+- elembio_project: ~
+  elembio_samplename: TW1
+  eseq_composition_tmp: '{"components":[{"id_run":50544,"position":1,"tag_index":5}]}'
+  id_eseq_flowcell_tmp: 289
+  id_eseq_pr_metrics_tmp: 6
+  id_eseq_product: f802fb877d7158d091fc50bb2c1c1ba7727aef399f2f5673b69d850521395b90
+  id_run: 50544
+  is_sequencing_control: 0
+  lane: 1
+  last_changed: 2025-07-24 15:25:29
+  qc: ~
+  qc_lib: ~
+  qc_seq: ~
+  tag2_sequence: ATGGCTTCTA
+  tag_decode_count: 6321
+  tag_decode_percent: 0.00569229
+  tag_index: 5
+  tag_sequence: ATGTTGCCAC
+- elembio_project: ~
+  elembio_samplename: TW2
+  eseq_composition_tmp: '{"components":[{"id_run":50544,"position":1,"tag_index":6}]}'
+  id_eseq_flowcell_tmp: 290
+  id_eseq_pr_metrics_tmp: 7
+  id_eseq_product: fb8f9fa2ad639fb868e611ffa0f9059453f01fbecef0a222e048d2a34c2d7eb0
+  id_run: 50544
+  is_sequencing_control: 0
+  lane: 1
+  last_changed: 2025-07-24 15:25:29
+  qc: ~
+  qc_lib: ~
+  qc_seq: ~
+  tag2_sequence: CAACAGTGGA
+  tag_decode_count: 46892
+  tag_decode_percent: 0.042228
+  tag_index: 6
+  tag_sequence: ACAACAGGCT
+- elembio_project: ~
+  elembio_samplename: ~
+  eseq_composition_tmp: '{"components":[{"id_run":50544,"position":2,"tag_index":0}]}'
+  id_eseq_flowcell_tmp: ~
+  id_eseq_pr_metrics_tmp: 1542
+  id_eseq_product: 69201980ecf676ec5abc6500828c1ab0a1e01e17bd7da058ff44ec49b10599f3
+  id_run: 50544
+  is_sequencing_control: 0
+  lane: 2
+  last_changed: 2025-07-24 15:25:37
+  qc: ~
+  qc_lib: ~
+  qc_seq: ~
+  tag2_sequence: ~
+  tag_decode_count: 6394631
+  tag_decode_percent: 7.01133
+  tag_index: 0
+  tag_sequence: ~
+- elembio_project: ~
+  elembio_samplename: Adept_CB1
+  eseq_composition_tmp: '{"components":[{"id_run":50544,"position":2,"tag_index":1}]}'
+  id_eseq_flowcell_tmp: ~
+  id_eseq_pr_metrics_tmp: 1543
+  id_eseq_product: 371642f7e494dd26c0648e8bb40be1a2893e7008e4a934db8051e9d4c4e98599
+  id_run: 50544
+  is_sequencing_control: 1
+  lane: 2
+  last_changed: 2025-07-24 15:25:37
+  qc: ~
+  qc_lib: ~
+  qc_seq: ~
+  tag2_sequence: ~
+  tag_decode_count: 12513
+  tag_decode_percent: 0.0137198
+  tag_index: 1
+  tag_sequence: ATGTCGCT
+- elembio_project: ~
+  elembio_samplename: Adept_CB2
+  eseq_composition_tmp: '{"components":[{"id_run":50544,"position":2,"tag_index":2}]}'
+  id_eseq_flowcell_tmp: ~
+  id_eseq_pr_metrics_tmp: 1544
+  id_eseq_product: 21839a6c44a092ee14cc23c020441dc40278eb5f066cdb0d16b206d2ada503ac
+  id_run: 50544
+  is_sequencing_control: 1
+  lane: 2
+  last_changed: 2025-07-24 15:25:37
+  qc: ~
+  qc_lib: ~
+  qc_seq: ~
+  tag2_sequence: ~
+  tag_decode_count: 15793
+  tag_decode_percent: 0.0173161
+  tag_index: 2
+  tag_sequence: CACAGATC
+- elembio_project: ~
+  elembio_samplename: Adept_CB3
+  eseq_composition_tmp: '{"components":[{"id_run":50544,"position":2,"tag_index":3}]}'
+  id_eseq_flowcell_tmp: ~
+  id_eseq_pr_metrics_tmp: 1545
+  id_eseq_product: e3be4a7b49d3d83e0063a1f4524e9831c08747c8786e9da9669785482ebce2f2
+  id_run: 50544
+  is_sequencing_control: 1
+  lane: 2
+  last_changed: 2025-07-24 15:25:37
+  qc: ~
+  qc_lib: ~
+  qc_seq: ~
+  tag2_sequence: ~
+  tag_decode_count: 12010
+  tag_decode_percent: 0.0131683
+  tag_index: 3
+  tag_sequence: GCACATAG
+- elembio_project: ~
+  elembio_samplename: Adept_CB4
+  eseq_composition_tmp: '{"components":[{"id_run":50544,"position":2,"tag_index":4}]}'
+  id_eseq_flowcell_tmp: ~
+  id_eseq_pr_metrics_tmp: 1546
+  id_eseq_product: 224266704d6e6a493405112c7bd407ea38e3d077a9e5a3782963d190b6a88b23
+  id_run: 50544
+  is_sequencing_control: 1
+  lane: 2
+  last_changed: 2025-07-24 15:25:37
+  qc: ~
+  qc_lib: ~
+  qc_seq: ~
+  tag2_sequence: ~
+  tag_decode_count: 14282
+  tag_decode_percent: 0.0156594
+  tag_index: 4
+  tag_sequence: TGTGTCGA
+- elembio_project: ~
+  elembio_samplename: TW1
+  eseq_composition_tmp: '{"components":[{"id_run":50544,"position":2,"tag_index":5}]}'
+  id_eseq_flowcell_tmp: 389
+  id_eseq_pr_metrics_tmp: 1547
+  id_eseq_product: ecae7a1c37a5d0542a52ae3a2f24bd6de7fd8d4217653c755863ca4506534d74
+  id_run: 50544
+  is_sequencing_control: 0
+  lane: 2
+  last_changed: 2025-07-24 15:25:37
+  qc: ~
+  qc_lib: ~
+  qc_seq: ~
+  tag2_sequence: ATGGCTTCTA
+  tag_decode_count: 5344
+  tag_decode_percent: 0.00585938
+  tag_index: 5
+  tag_sequence: ATGTTGCCAC
+- elembio_project: ~
+  elembio_samplename: TW2
+  eseq_composition_tmp: '{"components":[{"id_run":50545,"position":1,"tag_index":6}]}'
+  id_eseq_flowcell_tmp: ~
+  id_eseq_pr_metrics_tmp: 1548
+  id_eseq_product: 9f98d9939dbdc7eda86d6e748afa01298f9e3090ac52071bbbaafd49721ab193
+  id_run: 50545
+  is_sequencing_control: 0
+  lane: 1
+  last_changed: 2025-07-24 15:25:37
+  qc: ~
+  qc_lib: ~
+  qc_seq: ~
+  tag2_sequence: CAACAGTGGA
+  tag_decode_count: 38415
+  tag_decode_percent: 0.0421198
+  tag_index: 6
+  tag_sequence: ACAACAGGCT
+
