@@ -26,3 +26,13 @@
 - id_seq_composition: 9
   digest: 2c6da99b07f8a8d507df37a0fe3112ce55745e2ad8a417ddde5fbd5402e370da
   size: 1
+- id_seq_composition: 10
+  digest: 7843b4707c9d65439deaa849ebd31dee666570e8ba3648d9034912990fd6f6f7
+  size: 1
+- id_seq_composition: 11
+  digest: aafc1708726a2dda60e98c5f1d4ab6a6375ba0706c5a2415423e3672e6c3e515
+  size: 1
+- id_seq_composition: 12
+  digest: 842e43454b22617e6423a825e852f92f2a8a6c636d2ea47f7d0b542a4f109b24
+  size: 1
+
