@@ -3,6 +3,7 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
  - Dropped special SeqQC provisions for GCLP runs. The fact that the pages
    will have links to non-existing Sequencescape LIMS entities does not
    matter (lab work went though now decommissioned LIMS).
+ - Added reporting of MQC outcomes for Elembio lanes.
 
 release 74.3.0 (2025-07-22)
  - Changes to npg_qc::elembio::tag_metrics_generator 
